--- a/caffeine92.html
+++ b/caffeine92.html
@@ -50,7 +50,7 @@
 </div>
 <!--NAV MOBILE VIEW ENDS-->
 <nav>
-    <div id="caffeine92_logo"><img src="../Portfolio/images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
+    <div id="caffeine92_logo"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
     <ul class="float_l nav1">
         <li id="select_1"><a href="caffeine92.html">Home</a></li>
         <li id="select_2"><a href="pages/drinks.html">Drinks</a></li>
@@ -84,12 +84,12 @@
         <li><a href="url">Subscribe</a></li>
         <li><a href="url">Accessibility</a></li>
     </ul>
-        <ul class="float_r social_media">
-            <li><a href="https://janinebfernandez.github.io/Portfolio/index.html"><img src="../Portfolio/images/logo-2019-mini.png" alt="Janine B. Fernandez Portfolio"></a></li>
-            <li><a href="https://www.linkedin.com/in/janinebfernandez/"><img src="../Portfolio/images/icons/linkedin-icon.png" alt="Linkedin"></a></li>
-            <li><a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1"><img src="../Portfolio/images/icons/youtube-icon.png" alt="Youtube"></a></li>
-            <li><a href="https://www.instagram.com/j.ix.redefine9/"><img src="../Portfolio/images/icons/instagram-icon.png" alt="Instagram"></a></li>
-            <li><a href="https://www.flickr.com/photos/janinebfernandez/"><img src="../Portfolio/images/icons/flickr-icon.png" alt="Flickr"></a></li>
+    <ul class="float_r social_media">
+            <li><a href="https://janinebfernandez.github.io/Portfolio/index.html"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo-2019-mini.png" alt="Janine B. Fernandez Portfolio"></a></li>
+            <li><a href="https://www.linkedin.com/in/janinebfernandez/"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/linkedin-icon.png" alt="Linkedin"></a></li>
+            <li><a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/youtube-icon.png" alt="Youtube"></a></li>
+            <li><a href="https://www.instagram.com/j.ix.redefine9/"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/instagram-icon.png" alt="Instagram"></a></li>
+            <li><a href="https://www.flickr.com/photos/janinebfernandez/"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/flickr-icon.png" alt="Flickr"></a></li>
     </ul>
 </footer>
 </body>
