--- a/pages/drinks.html
+++ b/pages/drinks.html
@@ -37,7 +37,7 @@
 <!--NAV MOBILE VIEW ENDS-->
 
     <nav>
-        <div id="caffeine92_logo"><img src="../../../Portfolio/images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
+        <div id="caffeine92_logo"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
         <ul class="float_l nav1">
             <li id="select_1"><a href="../caffeine92.html">Home</a></li>
             <li id="select_2"><a href="drinks.html">Drinks</a></li>
@@ -63,7 +63,7 @@
         <div id="coffee_drinks">
             <ul>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/drip-mid.png" alt="Regular Brewed coffee">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/drip-mid.png" alt="Regular Brewed coffee">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>DRIP</h4>
                             <p>regular brewed coffee</p></div>
@@ -72,7 +72,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/espresso-mid.png" alt="espresso drink">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/espresso-mid.png" alt="espresso drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>ESPRESSO</h4>
                             <p>max. 6 shots, safety first</p></div>
@@ -81,7 +81,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/latte-mid.png" alt="latte drink">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/latte-mid.png" alt="latte drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>LATTE</h4>
                             <p>milk + espresso</p></div>
@@ -90,7 +90,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/cappuccino-mid.png" alt="cappucino drink">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/cappuccino-mid.png" alt="cappucino drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>CAPPUCCINO</h4>
                             <p>espresso + milk + foam</p></div>
@@ -99,7 +99,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/americano-mid.png" alt="americano drink">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/americano-mid.png" alt="americano drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>AMERICANO</h4>
                             <p>hot water + espresso</p></div>
@@ -108,7 +108,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/mocha-mid.png" alt="mocha drink">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/mocha-mid.png" alt="mocha drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>MOCHA</h4>
                             <p>milk + espresso + chocolate + whip</p></div>
@@ -117,7 +117,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/whitemocha-mid.png" alt="white mocha drink">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/whitemocha-mid.png" alt="white mocha drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>WHITE MOCHA</h4>
                             <p>milk + espresso + white chocolate + whip</p></div>
@@ -126,7 +126,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/flatwhite-mid.png" alt="flat white drink">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/flatwhite-mid.png" alt="flat white drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>FLAT WHITE</h4>
                             <p>whole milk + ristretto shots</p></div>
@@ -135,7 +135,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../Projects/Coffee_Infographics/images/coffee_info/caramelmacchiato-mid.png" alt="caramel macchiato">
+                    <img src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/caramelmacchiato-mid.png" alt="caramel macchiato">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>CARAMEL MACCHIATO</h4>
                             <p>milk + espresso + vanilla + caramel sauce</p></div>
@@ -156,12 +156,12 @@
         <li><a href="#">Subscribe</a></li>
         <li><a href="#">Accessibility</a></li>
     </ul>
-        <ul class="float_r social_media">
-        <li><a href="https://janinebfernandez.github.io/Portfolio/index.html"><img src="../../../Portfolio/images/logo-2019-mini.png" alt="Janine B. Fernandez Portfolio"></a></li>
-        <li><a href="https://www.linkedin.com/in/janinebfernandez/"><img src="../../../Portfolio/images/icons/linkedin-icon.png" alt="Linkedin"></a></li>
-        <li><a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1"><img src="../../../Portfolio/images/icons/youtube-icon.png" alt="Youtube"></a></li>
-        <li><a href="https://www.instagram.com/j.ix.redefine9/"><img src="../../../Portfolio/images/icons/instagram-icon.png" alt="Instagram"></a></li>
-        <li><a href="https://www.flickr.com/photos/janinebfernandez/"><img src="../../../Portfolio/images/icons/flickr-icon.png" alt="Flickr"></a></li>
+    <ul class="float_r social_media">
+        <li><a href="https://janinebfernandez.github.io/Portfolio/index.html"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo-2019-mini.png" alt="Janine B. Fernandez Portfolio"></a></li>
+        <li><a href="https://www.linkedin.com/in/janinebfernandez/"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/linkedin-icon.png" alt="Linkedin"></a></li>
+        <li><a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/youtube-icon.png" alt="Youtube"></a></li>
+        <li><a href="https://www.instagram.com/j.ix.redefine9/"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/instagram-icon.png" alt="Instagram"></a></li>
+        <li><a href="https://www.flickr.com/photos/janinebfernandez/"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/flickr-icon.png" alt="Flickr"></a></li>
     </ul>
 </footer>
 </body>
